--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,6 @@
 }
 
 body {
-  background: #000 url("/images/bg.png") no-repeat fixed center;
+  background: #000 url("/images/bg-compressed.png") no-repeat fixed center;
   background-size: cover;
 }
