--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 :root {
+  --dark: #030415;
   --gradient-1: rgba(10 11 37 / 0.5);
   --gradient-2: rgba(3 3 10 / 0.9);
   --pink: #da227b;
@@ -13,6 +14,7 @@
 }
 
 @theme inline {
+  --color-dark: var(--dark);
   --color-gradient-1: var(--gradient-1);
   --color-gradient-2: var(--gradient-2);
   --color-pink: var(--pink);
@@ -27,4 +29,8 @@
 body {
   background: #000 url("/images/bg-compressed.png") no-repeat fixed center;
   background-size: cover;
+}
+
+.blue_gradient {
+  @apply bg-gradient-to-r from-purple-500 via-blue-500 to-cyan-400 bg-clip-text text-transparent;
 }
